Home/General: Fix CTA section text no being responsive, and fix unaligned footer text.

--- a/assets/less/new/components/pre-footer.less
+++ b/assets/less/new/components/pre-footer.less
@@ -19,6 +19,7 @@
   p {
     margin-block: 0;
     max-inline-size: 45ch;
+    margin: auto;
   }
 
 
