--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -431,19 +431,6 @@ section {
   animation-direction: alternate;
 }
 
-.cta-sub-heading {
-  font-family: 'Inter', sans-serif;
-  font-size: 1.25rem;
-  font-weight: 500;
-  line-height: 1.5;
-}
-
-.cta-heading {
-  font-size: 5rem;
-  font-weight: 900;
-  line-height: 1.3;
-  margin: 0;
-}
 
 
 footer {
