--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -127,6 +127,25 @@
     padding-top: 10px;
     padding-bottom: 30px;
 
+    .cta-sub-heading {
+      font-family: 'Inter', sans-serif;
+      font-size: 1.25rem;
+      font-weight: 500;
+      line-height: 1.5;
+    }
+
+    .cta-heading {
+      font-size: 5rem;
+      font-weight: 900;
+      line-height: 1.3;
+      margin: 0;
+    }
+
+    .cta-section {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
     .cta {
       --btn-bg: color-mix(in srgb, var(--bg) 90%, transparent);
       display: grid;
@@ -289,6 +308,9 @@
     #free-your-inbox {
       .section-text {
         max-inline-size: 100%;
+      }
+      .cta-heading {
+        font-size: 2.75rem;
       }
     }
 
